testsuite/bsc.driver/depend/WFilePackageNameMismatch_Top.bs.bsc-out.expected
checking package dependencies
Error: "./WFilePackageNameMismatch_Sub.bs", line 1, column 8: (S0001)
  File name `WFilePackageNameMismatch_Sub' does not match package name
  `Fake_WFilePackageNameMismatch_Sub'
