testsuite/bsc.driver/depend/WFilePackageNameMismatch_Top.bs
package WFilePackageNameMismatch_Top() where

import WFilePackageNameMismatch_Sub
